Fix mobile codeWriter word wrapping. Remove uneccesary code

--- a/css/style.css
+++ b/css/style.css
@@ -583,14 +583,9 @@ legend {
 
 #codeWriter {
     position: absolute;
-    bottom: 0;
+    bottom: 1rem;
     right: 0;
     margin-right: 3rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 2.8rem;
-    width: 15rem;
     color: var(--ui-background-color);
     font-size: 1rem;
     text-shadow: 0.1rem 0.1rem 0.4rem var(--ui-background-color);
@@ -603,10 +598,8 @@ legend {
     transform: scale(1.1);
 }
 
-#githubLink {
-    display: flex;
-    justify-content: space-between;
-    width: 5.6rem;
+#codeWriter p {
+    display: inline;
 }
 
 #githubIcon {
